2009-02-22  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : Added get-bytevector-some.

2009-02-22  kokosabu  <kokosabu@gmail.com>

        * BufferedFileBinaryOutputPort.cpp : Added.

        * BufferedFileBinaryInputPort.cpp : Fixed getU8.

2009-02-21  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : Added get-bytevector-n!.

        * BufferedFileBinaryInputPort.cpp : position things works.

2009-02-21  kokosabu  <kokosabu@gmail.com>

        * Added: put-string.

        * Fixed: put-bytevector.

2009-02-21  higepon  <higepon@users.sourceforge.jp>

        * BufferedFileBinaryInputPort.cpp : position things doesn't work yet.

        * test/input-port.scm : FileBinaryInputPort (None-buffering)  passes tests.

        * BufferedFileBinaryInputPort.cpp : Added.

        * test/input-port.scm : Added tests for file-binary-input-port on positions and buffering.

2009-02-20  higepon  <higepon@users.sourceforge.jp>

        * Passes all of string-output-port tests.

        * test/output-port.scm: Adde tests for string-output-port. Now it fails, so commented them out.

        * test/input-port.scm : Added tests for textual-input-port (position things).

        * test/output-port.scm : Added tests for textual-output-port (position things).

        * configure.ac (CFLAGS): O2 => O3.

        * PortProcedures.cpp (transcodedPortEx): Accept binary output also.

        * ProcessProcedures.cpp : Issue 45 in mosh-scheme: spawned process is still alive even when a command is not found by leque.
        When in calling spawn, exevp fails, we should terminated the forked process.

2009-02-20  kokosabu  <kokosabu@gmail.com>

        * Added: make-custom-textual-input-port, make-custom-textual-output-port, put-u8,
                 flush-output-port.

2009-02-20  higepon  <higepon@users.sourceforge.jp>

        * Now profiler is broken. It will be fixed soon.
