@@ -50,6 +50,7 @@ public:
     int lookaheadU8();
     int readBytes(uint8_t* buf, int reqSize, bool& isErrorOccured);
     int readSome(uint8_t** buf, bool& isErrorOccured);
+    int readAll(uint8_t** buf, bool& isErrorOccured);
     int open();
     int close();
     int fileNo() const;
